@@ -246,164 +246,6 @@ void Monster_Aggressive_L1::selectVictim()
 {
 }
 
-float Monster_Aggr_Wander::preCondition()
-{
-	/*
-	 * Wandering has the following preconditions:
-	 * - Same as Action_Wander
-	 * - No target has been set.
-	 */
-
-	Monster_Aggressive* pAI = dynamic_cast<Monster_Aggressive*>( m_ai );
-	if ( pAI && pAI->currentVictim() )
-		return 0.0f;
-
-	return Action_Wander::preCondition();
-}
-
-float Monster_Aggr_MoveToTarget::preCondition()
-{
-	/*
-	 * Moving to the target has the following preconditions:
-	 * - A target has been set.
-	 * - The NPC is not in combat range.
-	 *
-	 * Here we take the fuzzy logic into account.
-	 * If the npc is injured, the chance of fighting will decrease.
-	 */
-
-	Monster_Aggressive* pAI = dynamic_cast<Monster_Aggressive*>( m_ai );
-
-	if ( !pAI )
-	{
-		return 0.0f;
-	}
-
-	P_CHAR currentVictim = pAI->currentVictim();
-
-	if ( !currentVictim || !validTarget( m_npc, currentVictim ) )
-		return 0.0f;
-
-	Q_UINT8 range = 1;
-	P_ITEM weapon = m_npc->getWeapon();
-
-	if ( weapon )
-	{
-		if ( weapon->hasTag( "range" ) )
-		{
-			range = weapon->getTag( "range" ).toInt();
-		}
-		else if ( weapon->basedef() )
-		{
-			range = weapon->basedef()->getIntProperty( "range", 1 );
-		}
-	}
-
-	if ( m_npc->inRange( currentVictim, range ) )
-		return 0.0f;
-
-	// 1.0 = Full Health, 0.0 = Dead
-	float diff = 1.0 - wpMax<float>( 0, ( m_npc->maxHitpoints() - m_npc->hitpoints() ) / ( float ) m_npc->maxHitpoints() );
-
-	if ( diff <= m_npc->criticalHealth() / 100.0 )
-	{
-		return 0.0;
-	}
-
-	return 1.0;
-}
-
-float Monster_Aggr_MoveToTarget::postCondition()
-{
-	/*
-	 * Moving to the target has the following postconditions:
-	 * - The target is not set anymore.
-	 * - The NPC is within fight range.
-	 * - The NPC is not injured above the critical line.
-	 */
-
-	Monster_Aggressive* pAI = dynamic_cast<Monster_Aggressive*>( m_ai );
-
-	if ( !pAI )
-	{
-		return 1.0f;
-	}
-
-	P_CHAR currentVictim = pAI->currentVictim();
-
-	if ( !currentVictim || !validTarget( m_npc, currentVictim ) )
-		return 1.0f;
-
-	Q_UINT8 range = 1;
-	P_ITEM weapon = m_npc->getWeapon();
-	if ( weapon )
-	{
-		if ( weapon->hasTag( "range" ) )
-		{
-			range = weapon->getTag( "range" ).toInt();
-		}
-		else if ( weapon->basedef() )
-		{
-			range = weapon->basedef()->getIntProperty( "range", 1 );
-		}
-	}
-
-	if ( m_npc->inRange( currentVictim, range ) )
-		return 1.0f;
-
-	// 1.0 = Full Health, 0.0 = Dead
-	float diff = 1.0 - wpMax<float>( 0, ( m_npc->maxHitpoints() - m_npc->hitpoints() ) / ( float ) m_npc->maxHitpoints() );
-
-	if ( diff <= m_npc->criticalHealth() / 100.0 )
-	{
-		return 1.0;
-	}
-
-	return 0.0;
-}
-
-void Monster_Aggr_MoveToTarget::execute()
-{
-	// We failed several times to reach the target so we wait
-	if ( nextTry > Server::instance()->time() || m_npc->nextMoveTime() > Server::instance()->time() )
-	{
-		return;
-	}
-
-	m_npc->setNextMoveTime();
-
-	Monster_Aggressive* pAI = dynamic_cast<Monster_Aggressive*>( m_ai );
-	if ( !pAI )
-		return;
-
-	P_CHAR currentVictim = pAI->currentVictim();
-
-	if ( !currentVictim )
-	{
-		return;
-	}
-
-	// Even if the victim is zero, thats correct.
-	if ( !m_npc->attackTarget() )
-	{
-		m_npc->fight( currentVictim );
-	}
-
-	bool run = m_npc->dist( currentVictim ) > 3;
-
-	if ( Config::instance()->pathfind4Combat() && m_npc->dist( currentVictim ) < 5 )
-	{
-		if ( !movePath( currentVictim->pos(), run ) )
-		{
-			nextTry = Server::instance()->time() + RandomNum( 1250, 2250 );
-		}
-	}
-	else
-	{
-		moveTo( currentVictim->pos(), run );
-	}
-}
-
 float Monster_Aggr_Fight::preCondition()
 {
 	/*
